# duckdb-el

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  Makefile  README.md  base64_simd.c  base64_simd.h  duckdb-api.h  duckdb-core.c  duckdb-spec.md  duckdb.el  ob-duckdb.el
.github/workflows/: ci.yml
tests/: base64-bench.el  duckdb-benchmark.el  duckdb-interactive-error-tests.el  duckdb-leak-tests.el  duckdb-query-tests.el  duckdb-tests.el  ob-duckdb-tests.el  test-helper.el
